Adding semantic linebreaks

--- a/budget/index.html
+++ b/budget/index.html
@@ -16,18 +16,27 @@
 {% block content_main %}
 
     <section class="media block block__flush-top block__sub">
-        <div class="media_image-container media_image-container__wide-margin media_image-container__right">
+        <div class="media_image-container
+                    media_image-container__wide-margin
+                    media_image-container__right">
             <img class="media_image" src="">
         </div>
         <div class="media_body">
             <h1>Budget and strategy</h1>
-            <p class="h3">The mission of the CFPB is to make consumer finance rules more effective, to consistently and fairly enforce those rules, and to empower consumers to take more control over their economic lives. Our vision is a consumer finance marketplace:</p>
+            <p class="h3">The mission of the CFPB is to make consumer finance rules more
+            effective, to consistently and fairly enforce those rules, and to empower consumers
+            to take more control over their economic lives. Our vision is a consumer finance
+            marketplace:</p>
             <ul class="h3 list list__branded">
-                <li>where customers can see prices and risks up front and where they can easily make product comparisons;</li>
-                <li>in which no one can build a business model around unfair, deceptive, or abusive practices;</li>
-                <li>that works for American consumers, responsible providers, and the economy as a whole.</li>
+                <li>where customers can see prices and risks up front and where they can easily
+                make product comparisons;</li>
+                <li>in which no one can build a business model around unfair, deceptive, or
+                abusive practices;</li>
+                <li>that works for American consumers, responsible providers, and the economy
+                as a whole.</li>
             </ul>
-            <p class="h3">We publish our strategy and budget so the public can hold us accountable.<p>
+            <p class="h3">We publish our strategy and budget so the public can hold us
+            accountable.<p>
         </div>
     </section>
 
@@ -36,7 +45,8 @@
         <div class="content-l content-l__main content-l__large-gutters">
             <div class="content-l_col content-l_col-1-2 block block__flush-top block__sub">
                 <h2 class="h3">Strategic plan</h2>
-                <p class="short-desc">In compliance with federal law, we publish a five-year strategy for pursuing our mission and vision.</p>
+                <p class="short-desc">In compliance with federal law, we publish a five-year
+                strategy for pursuing our mission and vision.</p>
                 <ul class="list list__links">
                     <li class="list_item">
                         <a class="list_link jump-link jump-link__right" href="/budget/strategic-plan/">
@@ -47,10 +57,12 @@
             </div>
             <div class="content-l_col content-l_col-1-2 block block__flush-top block__sub">
                 <h2 class="h3">Performance plans and reports</h2>
-                <p class="short-desc">Every year, we measure our performance against our strategic plan and explain how we will continue to make progress.</p>
+                <p class="short-desc">Every year, we measure our performance against our strategic
+                plan and explain how we will continue to make progress.</p>
                 <ul class="list list__links">
                     <li class="list_item">
-                        <a class="list_link jump-link jump-link__right" href="/budget/performance-plan-report/">
+                        <a class="list_link jump-link jump-link__right"
+                           href="/budget/performance-plan-report/">
                             See our performance plans and reports
                         </a>
                     </li>
@@ -60,14 +72,16 @@
         <div class="content-l content-l__main content-l__large-gutters">
             <div class="content-l_col content-l_col-1-2 block block__flush-top block__sub">
                 <h2 class="h3">Financial reports and updates</h2>
-                <p class="short-desc">Our budget describes what it takes to execute our plan. We detail the budget in annual reports and quarterly updates.</p>
+                <p class="short-desc">Our budget describes what it takes to execute our plan. We
+                detail the budget in annual reports and quarterly updates.</p>
                 <a class="jump-link jump-link__right" href="/budget/financial-report/">
                     Review our financial reports and updates
                 </a>
             </div>
             <div class="content-l_col content-l_col-1-2 block block__flush-top block__sub">
                 <h2 class="h3">Funding requests</h2>
-                <p class="short-desc">We receive funding from the Federal Reserve Board. We publish all our funding requests and the Fed's replies.</p>
+                <p class="short-desc">We receive funding from the Federal Reserve Board. We publish
+                all our funding requests and the Fed's replies.</p>
                 <a class="jump-link jump-link__right" href="/budget/funding-request/">
                     Review our funding requests
                 </a>
@@ -86,7 +100,8 @@
                         </span>
                     </h1>
                     <p class="short-desc">
-                        We work with vendors who can help us achieve our mission. We publish information information about both existing and future procurements.
+                        We work with vendors who can help us achieve our mission. We publish
+                        information information about both existing and future procurements.
                     </p>
                     <a class="jump-link" href="/doing-business-with-us/">
                         Learn more about opportunities to work with the CFPB
