--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -21,8 +21,14 @@
 {% block content_main %}
 
     <h1>Our mission</h1>
-    <p class="h3">We work to make markets for consumer financial products and services work for Americans. We arm people with the information they need to make smart financial decisions, and we protect them from unfair, deceptive, and abusive practices.</p>
-    <p>Above all, this means ensuring that consumers get the information they need to make the financial decisions they believe are best for themselves and their families. But it also means we look out for bad actors—through regular examinations of financial companies, complaints from consumers, and our own investigations—and when we find unfair, deceptive, or abusive practices, we take action. We also:<p>
+    <p class="h3">We work to make markets for consumer financial products and services
+    work for Americans. We arm people with the information they need to make smart financial
+    decisions, and we protect them from unfair, deceptive, and abusive practices.</p>
+    <p>Above all, this means ensuring that consumers get the information they need to make
+    the financial decisions they believe are best for themselves and their families. But
+    it also means we look out for bad actors—through regular examinations of financial
+    companies, complaints from consumers, and our own investigations—and when we find
+    unfair, deceptive, or abusive practices, we take action. We also:<p>
 
     <section class="bureau-mission">
 
@@ -33,7 +39,10 @@
                 </div>
                 <div class="media_body u-centered-on-mobile">
                     <h1 class="h3">Educate</h1>
-                    <p class="short-desc">We work with financial companies to help them understand how to follow our rules. We write reports about the state of the market. We answer common consumer questions and create toolkits so people know what their next step should be.</p>
+                    <p class="short-desc">We work with financial companies to help them
+                    understand how to follow our rules. We write reports about the state
+                    of the market. We answer common consumer questions and create toolkits
+                    so people know what their next step should be.</p>
                 </div>
             </section>
         </div>
@@ -45,7 +54,9 @@
                 </div>
                 <div class="media_body u-centered-on-mobile">
                     <h1 class="h3">Enforce</h1>
-                    <p class="short-desc">We take action against bad actors who hurt people in the financial services marketplace, returning billions of dollars to consumers.</p>
+                    <p class="short-desc">We take action against bad actors who hurt
+                    people in the financial services marketplace, returning billions of
+                    dollars to consumers.</p>
                 </div>
             </section>
         </div>
@@ -57,7 +68,10 @@
                 </div>
                 <div class="media_body u-centered-on-mobile">
                     <h1 class="h3">Empower</h1>
-                    <p class="short-desc">We create tools that let consumers take greater control of their options. We create opportunities for entrepreneurs, experts, advocates, and the financial industry to innovate in consumer-friendly ways.</p>
+                    <p class="short-desc">We create tools that let consumers take greater
+                    control of their options. We create opportunities for entrepreneurs,
+                    experts, advocates, and the financial industry to innovate in
+                    consumer-friendly ways.</p>
                 </div>
             </section>
         </div>
@@ -72,7 +86,9 @@
                     block__border-top
                     block__border-bottom">
         <h1 class="h2">Our core functions</h1>
-        <p>Congress created the CFPB to create a single point of accountability for enforcing federal consumer financial laws and protecting consumers in the financial marketplace. Before, that responsibility was divided among several agencies. Today, it's our job.</p>
+        <p>Congress created the CFPB to create a single point of accountability for enforcing
+        federal consumer financial laws and protecting consumers in the financial marketplace.
+        Before, that responsibility was divided among several agencies. Today, it's our job.</p>
 
         <div class="expandable
                     expandable__expanded
@@ -99,7 +115,8 @@
                 <section class="block__padded-top u-mb0 u-mt0">
                     <h1 class="h4">Among other things, we:</h1>
                     <ul class="list list__branded bureau-functions_list u-mb0">
-                        <li>Write rules, supervise companies, and enforce federal consumer financial protection laws</li>
+                        <li>Write rules, supervise companies, and enforce federal consumer
+                        financial protection laws</li>
                         <li>Restrict unfair, deceptive, or abusive acts or practices</li>
                         <li>Take consumer complaints</li>
                         <li>Promote financial education</li>
@@ -107,7 +124,8 @@
                     <ul class="list list__branded bureau-functions_list">
                         <li>Research consumer behavior</li>
                         <li>Monitor financial markets for new risks to consumers</li>
-                        <li>Enforce laws that outlaw discrimination and other unfair treatment in consumer finance</li>
+                        <li>Enforce laws that outlaw discrimination and other unfair treatment
+                        in consumer finance</li>
                     </ul>
                 </section>
             </div><!-- END .expandable -->
@@ -116,7 +134,8 @@
 
     <section class="block block__padded-top u-mt0">
         <h1 class="h2">CFPB leadership</h1>
-        <p class="short-desc">In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.</p>
+        <p class="short-desc">In January of 2012, President Barack Obama appointed
+        Rich Cordray to be the first Director of the CFPB.</p>
 
          <div class="block block__sub content-l content-l__main u-hide-on-mobile">
             <section class="content-l_col-1-2">
@@ -181,7 +200,9 @@
             </div>
             <div class="media_body">
                 <div class="bureau-history_text">
-                    <p class="h4">From the financial crisis through our work returning billions of dollars to consumers, find out where we came from and what we've been doing.</p>
+                    <p class="h4">From the financial crisis through our work returning
+                    billions of dollars to consumers, find out where we came from and what
+                    we've been doing.</p>
                     <a class="jump-link jump-link__right" href="history">
                         Learn about the history of the CFPB
                     </a>
