Typos and apostrophes

--- a/budget/index.html
+++ b/budget/index.html
@@ -50,7 +50,7 @@
                 <ul class="list list__links">
                     <li class="list_item">
                         <a class="list_link jump-link jump-link__right" href="/budget/strategic-plan/">
-                            Review the CFPB's strategic plan
+                            Review the CFPB’s strategic plan
                         </a>
                     </li>
                 </ul>
@@ -81,7 +81,7 @@
             <div class="content-l_col content-l_col-1-2 block block__flush-top block__sub">
                 <h2 class="h3">Funding requests</h2>
                 <p class="short-desc">We receive funding from the Federal Reserve Board. We publish
-                all our funding requests and the Fed's replies.</p>
+                all our funding requests and the Fed’s replies.</p>
                 <a class="jump-link jump-link__right" href="/budget/funding-request/">
                     Review our funding requests
                 </a>
@@ -101,7 +101,7 @@
                     </h1>
                     <p class="short-desc">
                         We work with vendors who can help us achieve our mission. We publish
-                        information information about both existing and future procurements.
+                        information about both existing and future procurements.
                     </p>
                     <a class="jump-link" href="/doing-business-with-us/">
                         Learn more about opportunities to work with the CFPB
