--- a/doing-business-with-us/index.html
+++ b/doing-business-with-us/index.html
@@ -19,7 +19,7 @@
     <p class="h3">
         We work with vendors who can help us find or develop the right tools, people, strategies,
         infrastructure, and programs in support of our mission. We do this work in the open. Here
-        you'll find information about both existing and future procurements. Any questions?
+        you’ll find information about both existing and future procurements. Any questions?
         <a href="mailto:david.gragan@cfpb.gov">Contact our head of procurement.</a>
     </p>
 
