--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -88,7 +88,7 @@
         <h1 class="h2">Our core functions</h1>
         <p>Congress created the CFPB to create a single point of accountability for enforcing
         federal consumer financial laws and protecting consumers in the financial marketplace.
-        Before, that responsibility was divided among several agencies. Today, it's our job.</p>
+        Before, that responsibility was divided among several agencies. Today, it’s our job.</p>
 
         <div class="expandable
                     expandable__expanded
@@ -181,7 +181,7 @@
             </li>
             <li class="list_item">
                 <a class="list_link jump-link jump-link__right" href="leadership-calendar">
-                    Review our leadership's calendar
+                    Review our leadership’s calendar
                 </a>
             </li>
             <li class="list_item">
@@ -202,7 +202,7 @@
                 <div class="bureau-history_text">
                     <p class="h4">From the financial crisis through our work returning
                     billions of dollars to consumers, find out where we came from and what
-                    we've been doing.</p>
+                    we’ve been doing.</p>
                     <a class="jump-link jump-link__right" href="history">
                         Learn about the history of the CFPB
                     </a>
