--- a/events/_event.html
+++ b/events/_event.html
@@ -43,7 +43,7 @@
                 {{ update_date[1:] if update_date[0] == '0' else update_date }}
             </time>
         </div>
-        {{ share(post.title, false, {
+        {{ share(post.title, true, {
            'text':     post.twtr_text,
            'related':  post.twtr_rel,
            'language': post.twtr_lang,
