Added todos for dummy link hrefs

--- a/events/_event-landing-macros.html
+++ b/events/_event-landing-macros.html
@@ -59,6 +59,7 @@
   {% from "post-macros.html" import category_icon as category_icon %}
   <section class="content_hero hero">
     <div class="hero_wrapper">
+        <!-- TODO replace link with link to event -->
         <a href="#" class="hero_card hero_card__events">
             <article class="hero_preview">
                 <span class="category-slug">
