--- a/events/_event-post-macros.html
+++ b/events/_event-post-macros.html
@@ -267,6 +267,7 @@
                         Video Replay will be<br> available shortly
                     {% else %}
                         {{ event_meta_datetime(post.date) }}
+                        <!-- TDOD: Replace with real download link -->
                         <a class="event-calendar_download jump-link jump-link__download" href="#">
                             <span class="jump_link_text">Download .ics</span>
                         </a>
