--- a/events/_single.html
+++ b/events/_single.html
@@ -37,6 +37,7 @@
         <div class="content-l">
             <section class="content-l_col content-l_col-1-2 event-footer_col">
                 <h3 class="h4 u-mb5">Downloads</h3>
+                <!-- TDOD: Replace with real download link -->
                 <a href="#" class="event-footer_link">Download event PDF <span class="cf-icon cf-icon-pdf"></span></a>
             </section>
             <section class="content-l_col content-l_col-1-2 event-footer_col">
