Fixes DF-1586 - corrects minicons

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="content-l_col content-l_col-1-3">
                     <h2 class="h5">
-                        <span class="cf-icon cf-icon-newspaper"></span>
+                        <span class="cf-icon cf-icon-speech-bubble"></span>
                         Blogs
                     </h2>
                     <p class="short-desc">
@@ -123,7 +123,7 @@
                 </div>
                 <div class="content-l_col content-l_col-1-3">
                     <h2 class="h5">
-                        <span class="cf-icon cf-icon-newspaper"></span>
+                        <span class="cf-icon cf-icon-date"></span>
                         Calendar
                     </h2>
                     <p class="short-desc">
