Fixes DF-1585 - adds oscines

--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -35,7 +35,7 @@
         <div class="bureau-mission_section">
             <section class="media bureau-mission_media">
                 <div class="media_image-container media_image-container__wide-margin">
-                    <img class="media_image u-centered-on-mobile" src="serve.jpg">
+                    <img class="media_image u-centered-on-mobile" src="../static/img/educate.png">
                 </div>
                 <div class="media_body u-centered-on-mobile">
                     <h1 class="h3">Educate</h1>
@@ -50,7 +50,7 @@
         <div class="bureau-mission_section">
             <section class="media bureau-mission_media">
                 <div class="media_image-container media_image-container__wide-margin">
-                    <img class="media_image u-centered-on-mobile" src="lead.jpg">
+                    <img class="media_image u-centered-on-mobile" src="../static/img/enforce.png">
                 </div>
                 <div class="media_body u-centered-on-mobile">
                     <h1 class="h3">Enforce</h1>
@@ -64,7 +64,7 @@
         <div class="bureau-mission_section">
             <section class="media bureau-mission_media">
                 <div class="media_image-container media_image-container__wide-margin">
-                    <img class="media_image u-centered-on-mobile" src="innovate.jpg">
+                    <img class="media_image u-centered-on-mobile" src="../static/img/empower.png">
                 </div>
                 <div class="media_body u-centered-on-mobile">
                     <h1 class="h3">Empower</h1>
