Added titles to pages that were missing them

--- a/budget/financial-report/index.html
+++ b/budget/financial-report/index.html
@@ -7,12 +7,13 @@
 {%- endblock %}
 
 {% block desc -%}
-    
+
 {%- endblock %}
 
 {% block content_main %}
 
     <div class="block block__flush-top block__sub">
+        <h1>Financial Report & Update</h1>
         <p class="h3">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
         <p>
