--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -16,7 +16,7 @@
 
 {% block content_main %}
 
-    <h1 class="u-visually-hidden">Press Resources</h1>
+    <h1>Press Resources</h1>
 
     <section class="press-section press-contacts">
 
