--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -22,11 +22,12 @@
     {% from "post-macros.html" import pagination as pagination with context %}
 
     <div class="block u-mt0 block__padded-bottom block__border-bottom">
-        <h1 class="h3">
+        <h1>Leadership Calendar</h1>
+        <p class="h3">
             At the Consumer Financial Protection Bureau, we are committed to letting you
             know how we’re working for you every day by, among other things, providing you
             with a view into the workday of the CFPB’s senior leadership.
-        </h1>
+        </p>
         <p>
             Richard Cordray is the Director of the CFPB. We post his calendar online,
             typically on a monthly basis, after reviewing it to determine whether any
