Fixes DF-1635 - broken link

--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -223,7 +223,7 @@
         </div><!-- END .content-l -->
 
         <a class="jump-link jump-link__large"
-           href="https://cfpb.github.io/design-manual/identity/logo/">
+           href="https://cfpb.github.io/design-manual/identity/logo.html">
             Logo files and more in the CFPB Design Manual
         </a>
 
