Fixes DF-1642 - changes https to http

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             </p>
                             <ul class="list__links">
                                 <li class="list_item">
-                                    <a class="list_link jump-link" href="https://www.consumerfinance.gov/">
+                                    <a class="list_link jump-link" href="http://www.consumerfinance.gov/">
                                         Go to consumerfinance.gov
                                     </a>
                                 </li>
