--- a/doing-business-with-us/index.html
+++ b/doing-business-with-us/index.html
@@ -23,12 +23,10 @@
         <a href="mailto:david.gragan@cfpb.gov">Contact our head of procurement.</a>
     </p>
 
-    <section class="block block__bg block__border-top block__border-bottom 
-                    block__business-step_container block__flush-sides">
+    <section class="block block__bg block__border-top block__border-bottom block__business-step_container block__flush-sides">
         <h1 class="h2">Opportunities to work with us</h1>
         <div class="content-l content-l__main">
-            <div class="block block__border-bottom block__business-step 
-                        block__padded-bottom block__flush-top content-l_col content-l_col-1-3">
+            <div class="block block__border-bottom block__business-step block__padded-bottom block__flush-top content-l_col content-l_col-1-3">
                 <h2 class="h4">
                     <span class="step-slug char-icon char-icon__1 u-mb15">Step one</span>
                     Register with System of Award Management (SAM)
@@ -44,8 +42,7 @@
                 </a>
             </div>
           
-            <div class="block block__border-bottom block__business-step 
-                        block__padded-bottom content-l_col content-l_col-1-3">
+            <div class="block block__border-bottom block__business-step block__padded-bottom content-l_col content-l_col-1-3">
                 <h2 class="h4">
                     <span class="step-slug char-icon char-icon__2 u-mb15">Step two</span>
                     Identify a specific opportunity
