Updated press resources link to domain relative url

--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -35,7 +35,7 @@
             please contact the press office.
         </p>
         <a class="jump-link"
-           href="{{ path }}press-resources/">Go to press resources page</a>
+           href="/newsroom/press-resources/">Go to press resources page</a>
     </aside>
 {% endblock %}
 
