Fix for DF-1576_Small_Business_nav
Fix for DF-1576_Small_Business_nav

--- a/doing-business-with-us/small-businesses/index.html
+++ b/doing-business-with-us/small-businesses/index.html
@@ -14,6 +14,15 @@
     {{ super() }} content__flush-bottom
 {% endblock %}
 
+{% block content_sidebar %}
+    {% import "sidenav.html" as sidenav %}
+    {{ sidenav.render(
+        vars.nav_items, 
+        active_nav_id,
+        'nav__small-business'
+    ) }}
+{% endblock %}
+
 {% block content_main %}
 
     <h1>Small businesses & minorities</h1>
