DF-1643: Hard Code Contacts
DF-1643: Hard Code Contacts

Revisions for Code Review

--- a/contact-us/_vars-contact-us.html
+++ b/contact-us/_vars-contact-us.html
@@ -1,3 +1,23 @@
 
 {% set path = '/contact-us/' %}
 {% set query = queries.contact %}
+
+{% set administrative_offices = {
+	'title'    : 'Administrative offices',
+	'name'     : 'Consumer Financial Protection Bureau',
+	'street'   : '1700 G Street, NW',
+	'city'     : 'Washington',
+	'state'    : 'DC',
+	'zip_code' : '20552'
+  }
+%}
+
+{% set consumer_contact_center = {
+	'title'    : 'Contact Center',
+	'name'     : 'Consumer Financial Protection Bureau',
+	'street'   : 'P.O. Box 4503',
+	'city'     : 'Iowa City',
+	'state'    : 'Iowa',
+	'zip_code' : '52244'
+  }
+%}
