Added smooth scroller

--- a/preview/index.html
+++ b/preview/index.html
@@ -42,10 +42,10 @@
             <img class="pv-logo_img" src="static/img/logo.png" alt="CFPB logo">
         </div>
         <nav class="pv-nav">
-            <a href="#ux_container" class="pv-nav_link">Organized</a>
-            <a href="#users_container" class="pv-nav_link">User-focused</a>
-            <a href="#responsive_container" class="pv-nav_link">Flexible</a>
-            <a href="#design_container" class="pv-nav_link">Consistent</a>
+            <a href="#ux_container" class="pv-nav_link js-smooth-scroll">Organized</a>
+            <a href="#users_container" class="pv-nav_link js-smooth-scroll">User-focused</a>
+            <a href="#responsive_container" class="pv-nav_link js-smooth-scroll">Flexible</a>
+            <a href="#design_container" class="pv-nav_link js-smooth-scroll">Consistent</a>
         </nav>
     </header>
 
