Activity log intro text
Replaced Lorem with intro sentences for Activity Log

--- a/activity-log/index.html
+++ b/activity-log/index.html
@@ -18,9 +18,8 @@
 
     <h1>Activity Log</h1>
     <p class="h3">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque saepe at ut quo
-        voluptas ratione cumque dolorem autem nemo sequi earum voluptate reprehenderit
-        molestias non optio enim dignissimos amet consequatur.
+        Find the latest CFPB activities and publications here. Use the filters 
+        below to browse by date, specific topics, or types of posts.
     </p>
 
     <div class="block__sub u-mb0">
