Content changes to strategic plan
* Strategic plan doesn't contain any performance plan or report, so changed the labeling text
* Added real content for the intro

--- a/budget/strategic-plan/index.html
+++ b/budget/strategic-plan/index.html
@@ -16,11 +16,11 @@
         Strategic Plan
     </h1>
     <p class="h3">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
+        The CFPB Strategic Plan outlines four goals in pursuit of the Bureau’s mission. For each, we also describe desired outcomes, strategies and investments required, and specific measures of success. This is the work you should expect us to take on over the coming years.
     <p>
     <div class="block block__sub">
         <h2 class="h4">
-            CFPB Strategic Plan, Budget, and Performance Plan and Report
+            CFPB Strategic Plan
         </h2>
         <ul class="list list__horizontal">
             <li class="list_item">
