Funding Request content updates
Changed name of section in side nav to "Funding Requests" (added an s to request), replaced Lorem with intro text.

--- a/budget/funding-request/index.html
+++ b/budget/funding-request/index.html
@@ -3,7 +3,7 @@
 {% set active_nav_id = 'funding-request' %}
 
 {% block title -%}
-    Funding Request
+    Funding Requests
 {%- endblock %}
 
 {% block desc -%}
@@ -14,7 +14,7 @@
 
     <div class="block block__flush-top block__sub">
         <p class="h3">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
+            As required by law, each fiscal quarter the Federal Reserve transfers to the CFPB the amount of funding formally requested by the Bureau director in order to carry out Bureau activities as outlined in our budget. Once the funds are transferred, the Bureau receives an acknowledgement letter from the Federal Reserve Board.
         <p>
     </div>
     <div class="block block__flush-top budget_page-content funding-request">
